--- a/2_state_of_the_art/0_index.tex
+++ b/2_state_of_the_art/0_index.tex
@@ -396,97 +396,125 @@ Para definir  este esquema de clasificación se extrajeron características comu
 
 Desde el punto de vista de la evaluación hay dos tipos de trabajos:
 \begin{itemize}
-\item Evaluación semiautomática: se utiliza una herramienta informática que da formato y sporte a la evaluación pero es el humano el que introduce las calificaciones. 
+\item Evaluación semiautomática: se utiliza una herramienta informática que da formato y soporte a la evaluación pero es el evaluador el que introduce los datos que conformarán las evaluaciones. 
 \item Evaluación automática:  se utiliza una herramienta informática que evalúa de manera automática a los estudiantes. Puede ser que esta herramienta requiera una intervención inicial del profesor para introducir datos o configurar la propia herramienta, pero las evaluaciones se calculan automáticamente.
 \end{itemize}
 
 \subsubsection{Evaluación semiautomática de competencias genéricas}
 
-En este grupo se engloban trabajos en los que la función de la herramienta informática para la evaluación de una o varias competencias genéricas de los estudiantes es la de dar soporte a la misma proporcionando el formato para introducir datos (notas, indicadores, respuestas a preguntas, ... etc.). Pero necesitan que alguien introduzca los datos. Ese alguien pueden ser los alumnos (autoevaluació o evaluación entre iguales) o los profesores. En ocasiones hay aproximaciones mixtas.
+En este grupo se engloban trabajos en los que la función de la herramienta informática para la evaluación de una o varias competencias genéricas de los estudiantes es la de dar soporte a la misma proporcionando el formato para introducir datos (notas, indicadores, respuestas a preguntas, ... etc.). Pero necesitan que alguien introduzca dichos datos. Ese alguien pueden ser los alumnos (autoevaluación o evaluación entre iguales), los profesores o ambos.
 
 % SEGUIR CON DESCRIPCIONES:
 
-% 1 \subsubsection{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
+\bigskip
+\textbf{Evaluación entre iguales y autoevaluación (peer and self-assessment)}
+\bigskip
 
 La autoevaluación es un proceso en el que los estudiantes evalúan su propio trabajo, mientras que  en el proceso de evaluación entre iguales un estudiante evalúa el trabajo de otro u otros estudiantes. Esta práctica se emplea por un lado para ahorrar tiempo del profesorado, y por otro, para mejorar tanto el conocimiento en la materia del alumnado como sus habilidades metacognitivas. A menudo este tipo de evaluación se acompaña de algún tipo de rúbrica \cite{malehorn1994ten}.
 
-Se han encontrado muchos trabajos en la literatura que utilizan este enfoque para evaluar competencias genéricas. De acuerdo a las preguntas de investigación de este trabajo únicamente se han recopilado aquellos trabajos que bajo este enfoque hagan uso de los ordenadores.
-
-\bigskip
-\textbf{Competencias evaluadas}
-\bigskip
-
-El \emph{trabajo en equipo} es la competencia más evaluada mediante este proceso de evaluación, ya que encontramos varios trabajos en los que después de realizar un trabajo en equipo los estudiante se evalúan unos a otros (evaluación entre iguales). También adquieren protagonismo otras competencias relacionadas con el trabajo en equipos, como son la \emph{comunicación} y la \emph{responsabilidad}. El espíritu empresarial (\emph{emprendimiento}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo de procesos de evaluación. En la tabla~\ref{tab:CompetenciasAuto} se puede ver el listado de trabajos para cada competencia.
-
-% starcic2008sustaining: Pregunta a profesores por todas las competencias mediante cuestionario sobre lo bueno de utilizar e-portfolio
-% so2011mapping: solo se ha leído el abstract y no se especifican
+El \emph{trabajo en equipo} y la \emph{comunicación} son las competencias más evaluadas mediante evaluación entre iguales y autoevaluación. El uso de tecnologías de la información (\emph{TIC}) y el \emph{idioma} son las otras competencias que destacan dentro de este grupo. En la tabla~\ref{tab:CompetenciasAuto} se puede ver la cantidad de trabajos y el listado de trabajos para cada competencia.
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| m{3.5cm} | m{9cm} |}
+  \begin{tabular}{| m{3.5cm} | c | m{9cm} |}
     \hline
-    COMPETENCIA & TRABAJOS\\
+    COMPETENCIA & CANT. & TRABAJOS\\
     \hline
     \hline
-    Análisis & \cite{sin2007evaluating,carreras2013promotion,lasa2013problem} \\
+    Análisis & 2 & \cite{carreras2013promotion,lasa2013problem} \\
     \hline
-    Comunicación &  \cite{masip2013self,barbera2011assessment,ruizacarate2013soft,sin2007evaluating,carreras2013promotion,johnson2002encouraging} \\
+    Aprendizaje permanente & 1 & \cite{oliver2013graduate} \\
     \hline
-    Creatividad & \cite{piedra2010measuring} \\
+    Comunicación & 5 &  \cite{masip2013self,ruizacarate2013soft,carreras2013promotion,martinez2014teamwork,oliver2013graduate} \\
     \hline
-    Emprendimiento & \cite{chang2009international,marquez2010have,achcaoucaou2014competence} \\
+    Creatividad & 1 & \cite{piedra2010measuring} \\
     \hline
-    Pensamiento crítico & \cite{arno2011promoting,pinto2011assessment} \\
+    Cultural & 1 & \cite{oliver2013graduate} \\
     \hline
-    Responsabilidad & \cite{ruizacarate2013soft,carreras2013promotion} \\
+    Emprendimiento & 2 & \cite{chang2009international,achcaoucaou2014competence} \\
     \hline
-    Resolución de problemas & \cite{johnson2002encouraging} \\
+    Gestión de proyectos & 1 & \cite{martinez2014teamwork} \\
+    \hline
+    Habilidades interpersonales & 1 & \cite{martinez2014teamwork} \\
+    \hline
+    Investigación & 1 & \cite{oliver2013graduate} \\
+    \hline
+    Liderazgo & 1 & \cite{martinez2014teamwork} \\
+    \hline
+    Pensamiento crítico & 1 & \cite{arno2011promoting} \\
+    \hline
+    Planificación y gestión del tiempo & 1 & \cite{martinez2014teamwork} \\
+    \hline
+    Resolución de problemas & 1 & \cite{oliver2013graduate} \\
+    \hline
+    Responsabilidad & 2 & \cite{ruizacarate2013soft,carreras2013promotion} \\
     \hline 
-    Segundo idioma & \cite{renau2010teaching,masip2013self,sevilla2012assessment} \\
+    Segundo idioma & 3 & \cite{renau2010teaching,masip2013self,sevilla2012assessment} \\
     \hline
-    TIC & \cite{lasa2013problem,masip2013self} \\
+    TIC & 3 & \cite{lasa2013problem,masip2013self,oliver2013graduate} \\
     \hline
-    Trabajo autónomo &  \cite{lasa2013problem} \\
+    Toma de decisiones & 0 &   \\
     \hline
-    Trabajo en equipo &  \cite{masip2013self,ficapal2015learning,khamis2012measurement,barbera2011assessment,ruizacarate2013soft,piedra2010measuring,mcloughlin2006beyond,carreras2013promotion,lasa2013problem,johnson2002encouraging} \\
+    Trabajo autónomo & 1 &  \cite{lasa2013problem} \\
+    \hline
+    Trabajo en equipo & 6 &  \cite{lasa2013problem,ficapal2015learning,ruizacarate2013soft,piedra2010measuring,carreras2013promotion,martinez2014teamwork,oliver2013graduate} \\
     \hline
   \end{tabular}
 \end{center}
 \caption{Competencias evaluadas mediante autoevaluación y evaluación entre iguales}
 \label{tab:CompetenciasAuto}
-\end{table} 
+\end{table}
 
-\bigskip
-\textbf{Estrategias}
-\bigskip
-
-En este grupo de trabajos se realizan experiencias utilizando algún tipo de herramienta que favorezca el desarrollo y desempeño de la competencia que se pretende evaluar. Después de la experiencia los alumnos realizan cuestionarios de autoevaluación o evaluación entre compañeros. A continuación se describen las diferentes estrategias encontradas, con los elementos que en ella aparecen y en la tabla~\ref{tab:MetodosAuto} se muestran los trabajos asociados a cada una:
+A continuación se describen los intrumentos de evaluación que se han utilizado en esta categoría.
 
 \begin{itemize}
-\item \emph{Metodología ABP}: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante rúbricas de autoevaluación y evaluación entre iguales.
-\item \emph{Practicas con herramientas empresariales}: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.
-\item \emph{Trabajo en E-Portfolio}: un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica
-\item \emph{Cuestionarios de nivel}: cuestionarios que miden el nivel de los estudiantes en el desempeño competencias genéricas previamente al inicio de una actividad o un curso.
-\item \emph{Interacción con EVA}: tras haber trabajado los estudiantes en actividades de un EVA se realizan cuestionarios de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas.
+\item La \emph{rúbrica} es un instrumento de evaluación basado en una escala cuantitativa y/o cualitativa asociada a unos criterios preestablecidos que miden las acciones del alumnado sobre los aspectos de la tarea o actividad que serán evaluados.  Básicamente, existen dos grupos: las holísticas, que tratan
+de evaluar el aprendizaje o competencia desde una visión más global, y las analíticas, que se centran en algún área concreta de aprendizaje~\cite{torres2010rubrica}.
+\item El \emph{cuestionario} consiste en un conjunto de preguntas preparado sistemática y cuidadosamente, sobre los hechos y aspectos que interesan en la evaluación.  Es una técnica de evaluación que puede abarcar aspectos cuantitativos y cualitativos. Su característica singular radica en que para registrar la información solicitada a los mismos sujetos, ésta tiene lugar de una forma menos profunda e impersonal, que el "cara a cara" de la entrevista~\cite{munoz2003cuestionario}. 
 \end{itemize}
 
+Estas herramientas han sido utilizadas en diferentes tipos de experiencias que se describen a continuación y que se resumen en la tabla~\ref{tab:MetodosAuto}:
+
+\begin{itemize}
+\item ABP apoyado en herramientas informáticas: trabajos que implementan una metodología de \emph{aprendizaje basado en problemas} (ABP o, del inglés, PBL, problem-based learning) para desarrollar competencias específicas y genéricas en sus estudiantes y que después se evalúan mediante autoevaluación y evaluación entre iguales.
+\item Trabajo en herramientas del EVA:  tras haber trabajado los estudiantes en actividades de un EVA se realizan procesos de autoevaluación y evaluación entre iguales para medir su desempeño en diferentes competencias genéricas. Las herramientas que suelen utilizarse son wikis, foros, actividades y e-portfolio. Esta última aparece en varios trabajos, un e-portfolio (del inglés \emph{electronic portfolio}), consiste en un conjunto de documentos, generalmente textos, archivos e imágenes, gestionados en un entorno web por un usuario. Se han recopilado trabajos donde los estudiantes trabajan con esta herramienta durante el curso y al final autoevalúan el desempeño de alguna competencia genérica.
+\item ABE apoyado en herramientas informáticas: los estudiantes realizan una experiencia de \emph{aprendizaje basado en equipos} (ABE o, del inglés, TBL, Team Based Learning) utilizando algún tipo de herramienta colaborativa.
+\item Trabajo con herramienta empresarial: herramientas ligadas al ámbito empresarial (contabilidad, gestión de equipos, gestión de proyectos, ... etc.) acompañadas de rúbricas de autoevaluación.
+\item Videoconferencias: los estudiantes realizan videoconferencias con herramientas como Skype o Hangouts y después son autoevaluados o evaluados por sus compañeros en la competencia o competencias que debería desempeñar en la videoconferencia.
+\end{itemize}
 
 \begin{table}
   \begin{center}
   \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
     \hline
-    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    TRABAJO & HERRAMIENTA & EXPERIENCIA \\
     \hline
     \hline
-    Metodología ABP & Autoevaluación y evaluación entre iguales &  \cite{lasa2013problem,renau2010teaching,johnson2002encouraging,masip2013self} \\
+    \cite{lasa2013problem} & Rúbrica & ABP apoyado en herramientas informáticas \\
     \hline
-    Practicas con herramientas empresariales & Autoevaluación &  \cite{chang2009international,achcaoucaou2014competence} \\
+    \cite{renau2010teaching} & No especifica & ABP apoyado en herramientas informáticas \\
     \hline
-    Trabajo en E-Portfolio & Autoevaluación &  \cite{arno2011promoting,starcic2008sustaining} \\
+    \cite{masip2013self} & Rúbrica & Videoconferencias \\
     \hline
-    Cuestionarios de nivel & Autoevaluación &  \cite{sevilla2012assessment,so2011mapping} \\
+    \cite{chang2009international} & Cuestionario & Trabajo con herramienta empresarial  \\
     \hline
-    Interacción con EVA & Autoevaluación y evaluación entre iguales &  \cite{ficapal2015learning,khamis2012measurement,barbera2011assessment,ruizacarate2013soft,piedra2010measuring,pinto2011assessment,carreras2013promotion} \\
+    \cite{achcaoucaou2014competence} & Cuestionario & Trabajo con  herramienta empresarial  \\
+    \hline
+    \cite{arno2011promoting} & Rúbrica & Trabajo en herramientas del EVA\\
+    \hline
+    \cite{sevilla2012assessment} & Cuestionario & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{ficapal2015learning} & Cuestionario & ABE apoyado en herramientas informáticas \\
+    \hline
+    \cite{ruizacarate2013soft} & Cuestionario & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{piedra2010measuring} & Rúbrica & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{carreras2013promotion} & Rúbrica & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{martinez2014teamwork} & Cuestionario & ABP apoyado en herramientas informáticas \\
+    \hline
+    \cite{oliver2013graduate} & Rúbrica & Trabajo en herramientas del EVA \\
     \hline
   \end{tabular}
 \end{center}
@@ -494,56 +522,65 @@ En este grupo de trabajos se realizan experiencias utilizando algún tipo de her
 \label{tab:MetodosAuto}
 \end{table} 
 
-% En \cite{mcloughlin2006beyond} se presentan una revisión de herramientas online para trabajar y evaluar competencias genéricas. Entre ellas también se mencionan herramientas colaborativas para la competencia del \emph{trabajo en equipo}. 
-
-
-%Cuestionario			\cite{marquez2010have}		Sólo resumen y no veo referencia tecnológica: Lo quitaría auqnue habría que quitarlo de todos los informes, estadísticas, ... etc.
-
-% Quitar también sin2007evaluating
-
 \bigskip
-\textbf{Limitaciones}
+\textbf{Evaluación del profesor (teacher assessment)}
 \bigskip
-
-Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. En algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación~\cite{lasa2013problem,sevilla2012assessment,khamis2012measurement,barbera2011assessment,pinto2011assessment}. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas específicas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
-
-% 2 \subsubsection{Evaluación del profesor (teacher assessment)}
 
 En muchos casos la evaluación de competencias genéricas se realiza mediante un seguimiento continuo del trabajo del estudiante por parte del profesor. Este proceso es lo que se conoce como \emph{evaluación continua}. Esto permite ir introduciendo mejoras constantes en el proceso de aprendizaje, siendo éste el motivo por el que la evaluación continua se adopta como una estrategia de evaluación formativa más orientada al proceso de aprendizaje que a una valoración puntual. Actualmente, los expertos, influenciados por la \emph{Declaración de Bolonia}, consideran más apropiado desarrollar este tipo de sistemas de evaluación~\cite{garcia2005competencias}. 
 
-% Todas competencias en \cite{serrano2013hiperion}, se queda fuera de la tabla porque no habla de ninguna en concreto, sino de trabajo futuro.
-
-
-\bigskip
-\textbf{Competencias evaluadas}
-\bigskip
-
-Las competencia genérica más evaluada mediante la evaluación del profesor es la \emph{comunicación} oral y escrita. En estos trabajos los profesores evalúan a los estudiantes mediante la corrección de documentos escritos y presentaciones orales. También destaca un número considerable de trabajos que evalúan la competencia de \emph{trabajo en equipo}. En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
+Las competencia genérica más evaluada mediante la evaluación del profesor es la \emph{comunicación} oral y escrita. En estos trabajos los profesores evalúan a los estudiantes mediante la corrección de documentos escritos y presentaciones orales. También le siguen de cerca los trabajos que evalúan las competencias de \emph{trabajo en equipo} y de \emph{resolución de problemas}. En la tabla~\ref{tab:CompetenciasProfesor} puede ver la relación de competencias evaluadas y los trabajos.
 
 \begin{table}
   \begin{center}
-  \begin{tabular}{| m{3.5cm} | m{9cm} |}
+  \begin{tabular}{| m{3.5cm} | c | m{9cm} |}
     \hline
-    COMPETENCIA & TRABAJOS\\
+    COMPETENCIA & CANT. & TRABAJOS\\
     \hline
     \hline
-    Comunicación & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,yang2014fine,lacuesta2009active} \\
-	\hline
-	Emprendimiento & \cite{ward2011developing} \\
-	\hline
-	Pensamiento crítico & \cite{lacuesta2009active} \\
-	\hline
-	Planificación y gestión del tiempo & \cite{lacuesta2009active} \\
-	\hline
-	Resolución de problemas & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\    
+    Análisis & 0 &  \\
     \hline
-    Trabajo en equipo & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,lacuesta2009active} \\    
+    Aprendizaje permanente & 0 &  \\
+    \hline
+    Comunicación & 5 &  \cite{lacuesta2009active,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,yang2014fine} \\
+    \hline
+    Creatividad & 0 &  \\
+    \hline
+    Cultural & 0 &  \\
+    \hline
+    Emprendimiento & 1 & \cite{ward2011developing} \\
+    \hline
+    Gestión de proyectos & 0 & \\
+    \hline
+    Habilidades interpersonales & 0 &  \\
+    \hline
+    Investigación & 0 &  \\
+    \hline
+    Liderazgo & 0 &  \\
+    \hline
+    Pensamiento crítico & 1 & \cite{lacuesta2009active} \\
+    \hline
+    Planificación y gestión del tiempo & 1 & \cite{lacuesta2009active} \\
+    \hline
+    Resolución de problemas & 1 & \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting,vizcarro2013assessment} \\
+    \hline
+    Responsabilidad & 0 &  \\
+    \hline 
+    Segundo idioma & 0 &  \\
+    \hline
+    TIC & 0 & \\
+    \hline
+    Toma de decisiones & 0 &   \\
+    \hline
+    Trabajo autónomo & 1 &  \cite{lasa2013problem} \\
+    \hline
+    Trabajo en equipo & 4 &  \cite{lacuesta2009active,martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\
     \hline
   \end{tabular}
 \end{center}
-\caption{Competencias evaluadas por el profesor}
+\caption{Competencias evaluadas directamente por el profesor}
 \label{tab:CompetenciasProfesor}
-\end{table} 
+\end{table}
+ 
 
 
 \bigskip
@@ -556,36 +593,43 @@ Además de las estrategias vistas en el punto anterior se incorpora aquí el mod
 
 En la tabla~\ref{tab:MetodosProfesor} puede ver los métodos que sigue cada uno de los trabajos que se han recopilado para este tipo de evaluación.
 
-
+% BUSCANDO MÉTODOS EVALUACIONES COMPETENCIAS
 
 \begin{table}
   \begin{center}
   \begin{tabular}{| m{3.5cm} | m{3.5cm} | m{5.5cm} |}
     \hline
-    MÉTODO & EVALUACIÓN & TRABAJOS\\
+    TRABAJO & HERRAMIENTA & EXPERIENCIA \\
     \hline
     \hline
-    Metodología ABP & Profesor &  \cite{lacuesta2009active} \\
+    \cite{lacuesta2009active} & diario  & ABP apoyado en herramientas informáticas \\
     \hline
-    Practicas con herramientas empresariales & Profesor &  \cite{ward2011developing} \\
+    \cite{ward2011developing} & entrevista & Videoconferencias \\
     \hline
-    Trabajo en e-portfolio & Estudiantes y Profesor &  \cite{martin2013acquired,rodriguez2010portfolio,benlloch2007adapting} \\
+    \cite{martin2013acquired} & Rúbrica & Trabajo en herramientas del EVA \\
     \hline
-    Modelo matemático evaluado por etapas & Profesor &  \cite{yang2014fine} \\
-    \hline   
-% QUITAR LOS 3 de abajo 
-    Rúbricas & Profesor &  \cite{casan2015developing,martin2010new,prashar2010competence} \\
+    \cite{rodriguez2010portfolio} & Rúbrica & Trabajo en herramientas del EVA  \\
+    \hline
+    \cite{benlloch2007adapting} & Seguimiento & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{yang2014fine} & Evaluaciones individuales actividades  & Implementación modelo matemático itinerario aprendizaje \\
+    \hline
+    \cite{serrano2013hiperion} &  & Trabajo en herramientas del EVA \\
+    \hline
+    \cite{vizcarro2013assessment} & Cuestionario  & Trabajo en herramientas del EVA \\
     \hline
   \end{tabular}
 \end{center}
-\caption{Métodos utilizados en la evaluación de los profesores}
+\caption{Métodos utilizados en la evaluación realizada por los profesores}
 \label{tab:MetodosProfesor}
-\end{table}
+\end{table} 
 
 
 \bigskip
 \textbf{Limitaciones}
 \bigskip
+
+Aunque la autoevaluación y evaluación entre iguales son enfoques que quitan trabajo al docente, no todos son ventajas. En algunos trabajos anteriores, este enfoque a menudo sólo se utiliza de manera complementaria a algún otro tipo de evaluación~\cite{lasa2013problem,sevilla2012assessment,khamis2012measurement,barbera2011assessment,pinto2011assessment}. Además, se puede dar el caso que la autoevaluación no se ajuste del todo a la realidad del desempeño del estudiante. Por ejemplo, en~\cite{carreras2013promotion} hay notables diferencias entre las calificaciones que se auto-asignan los estudiantes en algunas competencias y las calificaciones que le asignaron los profesores en esas mismas competencias. En ese trabajo se promovió la adquisición de competencias genéricas desde un punto de vista interdisciplinar y se diseñaron herramientas específicas para evaluar dichas habilidades. A la hora de evaluar, se realizaron tanto autoevaluaciones como evaluaciones del profesor. En esta experiencia se evaluaron cuatro competencias genéricas: \emph{capacidad de análisis},  \emph{habilidades de escritura}, \emph{responsabilidad} y \emph{capacidad de trabajo en equipo}. Cabe destacar discrepancias entre las calificaciones que se auto-asignan los estudiantes en las dos primeras competencias. En la \emph{capacidad de análisis} la discrepancia es de un 55,65\%, mientras que en las \emph{habilidades de escritura} de un 13,75\%.
 
 Uno de los problemas de la no automatización de los procesos de evaluación es la escalabilidad de algunos procesos de evaluación. En~\cite{serrano2013hiperion} se diseña \emph{Hiperion}, una sistema de recomendación que ayuda a diseñar actividades adaptadas a cada estudiante para mejorar sus competencias. En el estudio de caso mostrado en este trabajo, los profesores evaluaban las competencias de los estudiantes manualmente y después aplicaban Hiperion. La principal desventaja de la herramienta es el tiempo que el profesor ha de dedicar para asignar los diferentes logros y el peso de cada nota para cada competencia en las actividades.
 
