--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -866,6 +866,22 @@ author = "Leslie Borjas De Xena"
   publisher={Elsevier}
 }
 
+@article{torres2010rubrica,
+  title={La r{\'u}brica como instrumento pedag{\'o}gico para la tutorizaci{\'o}n y evaluaci{\'o}n de los aprendizajes en el foro online en educaci{\'o}n superior},
+  author={Torres-Gordillo, Juan-Jes{\'u}s and Perera-Rodr{\'\i}guez, V{\'\i}ctor-Hugo},
+  journal={Pixel-Bit: Revista de medios y educaci{\'o}n},
+  number={36},
+  pages={141--149},
+  year={2010},
+  publisher={Secretariado de Recursos Audiovisuales y Nuevas Tecnolog{\'\i}as}
+}
+
+@article{munoz2003cuestionario,
+  title={El cuestionario como instrumento de investigaci{\'o}n/evaluaci{\'o}n},
+  author={Mu{\~n}oz, Tom{\'a}s Garc{\'\i}a},
+  journal={Espanha: Almenjandrelo. Acedido em http://personal. telefonica. terra. es/web/medellinbadajoz/sociologia/ElCuestionario. pdf},
+  year={2003}
+}
 % Fin listado de competencias
 
 @comment{jabref-meta: selector_publisher:}
