--- a/dissertation.tex
+++ b/dissertation.tex
@@ -251,7 +251,7 @@
 
 %\bibliographystyle{unsrt} % Defines the bibliography style
 
-\bibliographystyle{alpha} % Defines the bibliography style
+\bibliographystyle{abbrv} % Defines the bibliography style
 
 %\bibliographystyle{apa-good} % Defines the bibliography style
 %\bibliographystyle{natbib} % Defines the bibliography style
